Bug 914426. Don't try to dump DeprecatedTextureHost contents unless HTML tree dumping is enabled. Also, be lenient about null values and unknown formats. r=nrc