gfx/layers/composite/ThebesLayerComposite.cpp
@@ -114,7 +114,9 @@ ThebesLayerComposite::RenderLayer(const nsIntPoint& aOffset,
 #ifdef MOZ_DUMP_PAINTING
   if (gfxUtils::sDumpPainting) {
     nsRefPtr<gfxImageSurface> surf = mBuffer->GetAsSurface();
-    WriteSnapshotToDumpFile(this, surf);
+    if (surf) {
+      WriteSnapshotToDumpFile(this, surf);
+    }
   }
 #endif
 
@@ -158,7 +160,7 @@ ThebesLayerComposite::RenderLayer(const nsIntPoint& aOffset,
 CompositableHost*
 ThebesLayerComposite::GetCompositableHost()
 {
-  if ( mBuffer && mBuffer->IsAttached()) {
+  if (mBuffer && mBuffer->IsAttached()) {
     return mBuffer.get();
   }
 
